--- a/SoftwareTesting.html
+++ b/SoftwareTesting.html
@@ -95,7 +95,8 @@ iframe{
 
 <div class="div2">
     <h1>Slides no 1 </h1>
-    <br>
+    <be>
+	 <embed src="Outline Software Testing (1).pdf" width="800" height="500" type='application/pdf'>
     <iframe src="Software Testing (1).pdf" frameborder="0"></iframe>
     </div>
 
