--- a/SoftwareTesting.html
+++ b/SoftwareTesting.html
@@ -88,7 +88,8 @@ iframe{
     <div class="div1">
     <h1>Course Outline</h1>
     <br>
-    <iframe src="Outline Software Testing (1).pdf" frameborder="0"></iframe>
+<!--     <iframe src="Outline Software Testing (1).pdf" frameborder="0"></iframe> -->
+	   <object data="Outline Software Testing (1).pdf" type="application/pdf" width="400px" height="400px">
 </div>
 
 <br>
